Throttle rate of requestAnimationFrame when page is not visible https://bugs.webkit.org/show_bug.cgi?id=67873

Reviewed by Anders Carlsson.

Source/WebCore:

Add logic to suspend and resume scripted animations when page is hidden,
minimized or the tab is not visible. The hide/minimize notification comes
in from WebKit/WebKit2 to a new set of functions.

* WebCore.exp.in:
* page/Page.cpp:
(WebCore::Page::didMoveOnscreen):
(WebCore::Page::willMoveOffscreen):
(WebCore::Page::suspendScriptedAnimations):
(WebCore::Page::resumeScriptedAnimations):
* page/Page.h:

Source/WebKit/mac:

Plumb through notification when the window is hidden/shown or
minimized/unminimized

* WebView/WebView.mm:
(-[WebView _windowWillOrderOnScreen:]):
(-[WebView _windowWillOrderOffScreen:]):

Source/WebKit2:

Plumb through notification when the window is hidden/shown or
minimized/unminimized

* WebProcess/WebPage/DrawingAreaImpl.cpp:
(WebKit::DrawingAreaImpl::suspendPainting):
(WebKit::DrawingAreaImpl::resumePainting):

Canonical link: https://commits.webkit.org/86367@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97640 268f45cc-cd09-0410-ab3c-d52691b4dbfc