Source/WebKit2/WebProcess/WebPage/DrawingAreaImpl.cpp
@@ -406,6 +406,8 @@ void DrawingAreaImpl::suspendPainting()
 
     m_isPaintingSuspended = true;
     m_displayTimer.stop();
+
+    m_webPage->corePage()->suspendScriptedAnimations();
 }
 
 void DrawingAreaImpl::resumePainting()
@@ -423,6 +425,8 @@ void DrawingAreaImpl::resumePainting()
 
     // FIXME: We shouldn't always repaint everything here.
     setNeedsDisplay(m_webPage->bounds());
+
+    m_webPage->corePage()->resumeScriptedAnimations();
 }
 
 void DrawingAreaImpl::enterAcceleratedCompositingMode(GraphicsLayer* graphicsLayer)
